language/move-lang/tests/move_check/expansion/use_spec_schema_invalid_as.move
address 0x2 {
module X {
    spec schema Foo<T> {
        ensures true;
    }
}

module M {
    use 0x2::X::{Foo as foo};
    struct S {}

    spec t {
        apply foo<S> to t;
    }
}

}
